# FastSAM3D

./: pyproject.toml
segment_anything/: build_sam3D.py
